--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1 {
 
 a {
     text-decoration: none; 
-    color: midnightblue;
+    color: white;
 }
 
 .assign {
@@ -19,11 +19,11 @@ a {
     margin: 10px;
     background: #94B49F;
     border-radius: 20px;
-    display: flex;
 }
 
 .assign img {
     width: 200px;
     padding: 10px;
-    border: 2px solid midnightblue; 
+    border: 2px solid white;
+    border-radius: 10px; 
 }
