--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 a {
-    text-decoration: none; 
+    text-decoration: none;
     color: white;
 }
 
@@ -19,11 +19,14 @@ a {
     margin: 10px;
     background: #94B49F;
     border-radius: 20px;
+    width: 20%;
+    box-shadow: 8px 8px white;
+    display: block;
 }
 
 .assign img {
     width: 200px;
     padding: 10px;
     border: 2px solid white;
-    border-radius: 10px; 
+    border-radius: 10px;
 }
