--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: #94B49F;
+    background: #B4CFB0;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-wrap: wrap;
@@ -16,8 +16,12 @@ a {
     color: white;
 }
 
+p {
+    color: white;
+}
+
 .assign {
-    background-color: #B4CFB0;
+    background-color: #94B49F;
     margin: 10px;
     padding: 10px;
     border-radius: 20px;
